--- a/grid.less
+++ b/grid.less
@@ -1,4 +1,3 @@
-
 @column: column;
 @grid-size: 12;
 .make-grid(@i:1) when (@i =< @grid-size) {
@@ -13,12 +12,27 @@
 .row {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 50px;
   grid-gap: 1%;
 }
+
 .column {
   background-color: green;
-  margin: 20px 0 20px 0;
+  margin: 20px 0 0 0;
+  color: white;
+  text-size:30px;
 }
 
-
+@media screen and (max-width: 700px) {
+  .column-1 { 
+    grid-column-end: span 3;
+    background-color: blue;
+  }
+  .column-2 {
+    grid-column-end: span 6;
+    background-color: blue; 
+  }
+  .column-6 {
+    grid-column-end: span 12;
+    background-color: blue;
+  }  
+}
