--- a/style/carousel.less
+++ b/style/carousel.less
@@ -1,4 +1,4 @@
-body {
+#carousel {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,7 +15,7 @@ body {
   overflow: hidden;
 }
 
-.btn {
+.btnSlide {
   text-align: center;
   height: 50px;
   visibility: visible;
