--- a/style/style.less
+++ b/style/style.less
@@ -1,2 +1,4 @@
-@import "grid.less";
-@import "button_style.less";
+//@import "grid.less";
+//@import "button.less";
+//@import "burger.less";
+@import "carousel.less";
