--- a/style/style.less
+++ b/style/style.less
@@ -1,2 +1,5 @@
-@import "grid.less";
-@import "button_style.less";
+//@import "grid.less";
+//@import "button_style.less";
+
+
+@import "modal.less";
