--- a/style/modal.less
+++ b/style/modal.less
@@ -1,28 +1,5 @@
-//.modal {
-//  position: fixed;
-//  top: 0;
-//  left: 0;
-//  right: 0;
-//  margin: auto;
-//  max-width: 400px;
-//  background-color: yellow;
-//  border-radius: 10px;
-//}
-//
-//.btn-close {
-//  position: absolute;
-//  top: 0;
-//  right: 0;
-//  margin: 0;
-//  padding: 0;
-//  width: 20px;
-//}
-//
-//.hidden {
-//  display: none
-//}
 
-.modal{
+.modal {
   position: fixed;
   top: 0;
   left: 0;
@@ -44,3 +21,18 @@
 
 .hidden { display: none; }
 
+.background-dark {
+  background-color:rgba(0,0,0,.5);
+}
+
+
+/*  for 1 modal window */
+#modal-bg-dark {
+    position:fixed;
+    display:flex;
+    width:100%;
+    height:100%;
+    justify-content:center;
+    align-items:center;
+    background:rgba(0,0,0,.7);
+}
