carousel.less - rename class

--- a/style/carousel.less
+++ b/style/carousel.less
@@ -1,21 +1,17 @@
-#carousel {
+
+.carousel {
   display: flex;
   justify-content: center;
   align-items: center;
   left: 0;
 }
 
-#carousel_photo {
-  width: 1300px;
-}
-
-#carousel1 {
+#carouselSlider {
   left: 0;
-  width: 320px;
   overflow: hidden;
 }
 
-.btnSlide {
+.btnSlider {
   text-align: center;
   height: 50px;
   visibility: visible;
@@ -27,13 +23,13 @@
   visibility: hidden;
 }
 
-#btn_prev {
+#btnPrev {
   position: relative; //for shift on image
   left: 15px;
   z-index: 2;
 }
 
-#btn_next {
+#btnNext {
   position: relative;
   right: 15px;
   z-index: 2;
