modal.less -add top=0 for background modal

--- a/style/modal.less
+++ b/style/modal.less
@@ -19,20 +19,19 @@
   width: 20px;
 }
 
-.hidden { display: none; }
-
-.background-dark {
-  background-color:rgba(0,0,0,.5);
+.hidden {
+  display: none;
 }
 
 
-/*  for 1 modal window */
+/*  blackout background for modal window */
 #modal-bg-dark {
-    position:fixed;
-    display:flex;
-    width:100%;
-    height:100%;
-    justify-content:center;
-    align-items:center;
-    background:rgba(0,0,0,.7);
+  position: fixed;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, .7);
 }
