add for button in burger - burger.less

--- a/style/burger.less
+++ b/style/burger.less
@@ -26,6 +26,12 @@ nav {
   &:hover {
     box-shadow: 0 0 40px 40px rgba(0, 0, 0, 0.2) inset;
   }
+
+  button {
+    color: white;
+    background-color: black;
+    border: none;
+  }
 }
 
 .logo {
@@ -92,5 +98,6 @@ li a:hover {
     align-items: center;
     width: 100%;
   }
+
 
 }
