modal.less delete top for modal window

--- a/style/modal.less
+++ b/style/modal.less
@@ -1,13 +1,13 @@
 
 .modal {
   position: fixed;
-  top: 0;
   left: 0;
   right: 0;
   margin: auto;
   max-width: 400px;
   background-color: sandybrown;
   border-radius: 10px;
+
 }
 
 .close-button {
@@ -19,18 +19,20 @@
   width: 20px;
 }
 
+
 .hidden {
   display: none;
 }
 
 
 /*  blackout background for modal window */
-#modal-bg-dark {
+.modal-bg-dark {
   position: fixed;
   display: flex;
   width: 100%;
   height: 100%;
   top: 0;
+  left: 0;
   justify-content: center;
   align-items: center;
   background: rgba(0, 0, 0, .7);
