--- a/style/modal.less
+++ b/style/modal.less
@@ -10,6 +10,18 @@
 
 }
 
+.table-modal {
+  position: fixed;
+  top: 50px;
+  left: 10px;
+  right: 0;
+  margin: auto;
+  max-width: 400px;
+  background-color: white;
+  border-radius: 10px;
+padding: 10px;
+}
+
 .close-button {
   position: absolute;
   top: 0;
