--- a/style/modal.less
+++ b/style/modal.less
@@ -11,6 +11,8 @@
 }
 
 .table-modal {
+  display: flex;
+  flex-direction: column;
   position: fixed;
   top: 50px;
   left: 10px;
@@ -19,8 +21,9 @@
   max-width: 400px;
   background-color: white;
   border-radius: 10px;
-padding: 10px;
+  padding: 10px; 
 }
+
 
 .close-button {
   position: absolute;
@@ -49,3 +52,4 @@ padding: 10px;
   align-items: center;
   background: rgba(0, 0, 0, .7);
 }
+
