--- a/style/input.css
+++ b/style/input.css
@@ -1,6 +1,12 @@
 .valid-input{
-    border:1px solid black
+    border:1px solid black;
 }
 .error-input{
-    border:2px solid red
+    border:2px solid red;
+}
+
+#app, input {
+    display: block;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
